<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStoryFragment">

    <ImageView
        android:alpha="0"
        tools:alpha="100"
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

    <TextView
        android:id="@+id/tv_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:alpha="0"
        android:padding="@dimen/size_xxxsmall"
        android:text="@string/add_image_from"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/previewImageView"
        app:layout_constraintStart_toStartOf="@+id/previewImageView"
        app:layout_constraintTop_toBottomOf="@id/previewImageView"
        tools:alpha="100" />

    <LinearLayout
        android:id="@+id/layout_btn_add_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/previewImageView"
        app:layout_constraintEnd_toEndOf="@id/previewImageView"
        app:layout_constraintTop_toBottomOf="@id/tv_add_image">

        <Button
            android:alpha="0"
            tools:alpha="100"
            android:id="@+id/button_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/space_normal"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/camera"
            android:textColor="@color/white" />

        <Button
            android:alpha="0"
            tools:alpha="100"
            android:id="@+id/button_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/space_normal"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/gallery"
            android:textColor="@color/white" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:alpha="0"
        tools:alpha="100"
        android:id="@+id/textInputLayoutDescription"
        style="@android:style/TextAppearance.Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_normal"
        android:layout_marginHorizontal="@dimen/space_jumbo"
        app:errorEnabled="true"
        app:errorTextColor="@color/red_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_btn_add_image">

        <com.ikhsan.storyapp.base.customview.CustomEditText
            android:alpha="0"
            tools:alpha="100"
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_jumbo"
            android:gravity="center|start"
            android:hint="@string/description"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.274" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:alpha="0"
        tools:alpha="100"
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_xxxjumbo"
        android:background="@drawable/btn_background"
        android:text="@string/add_story"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutDescription"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutDescription" />



</androidx.constraintlayout.widget.ConstraintLayout>